# rendering-engine

./: .gitignore  CMakeLists.txt  README.md
engine_input/: world.xml
examples/: sol.3d
examples/models/: comet.3d  earth.3d  jupiter.3d  mars.3d  mercury.3d  moon.3d  neptune.3d  saturn.3d  uranus.3d  venus.3d
examples/worlds/: dinamic_solar_system.xml  scratchpad.xml  sistema1.xml  solar_system_2.xml
generator_input/: catalog.xml
include/engine/: config.hpp  module.hpp
include/engine/parse/util/: float.hpp  fp.hpp
include/engine/parse/xml/: camera.hpp  err.hpp  err_fmt.hpp  float_attr.hpp  model.hpp  module.hpp  projection.hpp  rotate.hpp  transform.hpp  world.hpp  xml.hpp  xyz.hpp
include/engine/parse/xml/camera/: camera.hpp  projection.hpp
include/engine/parse/xml/err/: err.hpp  err_fmt.hpp
include/engine/parse/xml/group/: group.hpp  model.hpp
include/engine/parse/xml/group/model/: model.hpp  model_list.hpp
include/engine/parse/xml/group/transform/: rotate.hpp  transform.hpp  transform_list.hpp
include/engine/parse/xml/util/: float_attr.hpp  fp_attr.hpp  number_attr.hpp  xyz.hpp
include/engine/render/: camera.hpp  group.hpp  keyboard.hpp  model.hpp  module.hpp  renderer.hpp  state.hpp  transform.hpp  world.hpp
include/engine/render/group/: group.hpp  transform.hpp
include/engine/render/layout/world/group/: group.hpp  transform.hpp
include/engine/render/layout/world/group/transform/: rotate.hpp  transform.hpp
include/engine/render/world/: world.hpp
include/engine/render/world/group/: model.hpp
include/engine/util/: parse_float.hpp  try.hpp
include/generator/: config.hpp  module.hpp
include/generator/err/: err.hpp  err_fmt.hpp
include/generator/primitives/: box.hpp  cone.hpp  module.hpp  plane.hpp  sphere.hpp
include/generator/primitives/err/: err.hpp  err_fmt.hpp
include/generator/util/: pretty_print.hpp
include/util/: coord_conv.hpp  number.hpp  parse_number.hpp  pretty_print.hpp  try.hpp
lib/brief_int/: CMakeLists.txt  brief_int.hpp
lib/intrinsics/: branching.hpp
lib/nonnull_ptr/: nonnull_ptr.hpp
lib/rapidxml/: rapidxml.hpp
lib/spdlog/include/spdlog/: tweakme.h
src/engine/: main.cpp
src/engine/parse/util/: float.cpp
src/engine/parse/xml/: camera.cpp  float_attr.cpp  model.cpp  projection.cpp  rotate.cpp  transform.cpp  world.cpp  xml.cpp  xyz.cpp
src/engine/parse/xml/camera/: camera.cpp  projection.cpp
src/engine/parse/xml/group/: group.cpp  model.cpp
src/engine/parse/xml/group/model/: model.cpp  model_list.cpp
src/engine/parse/xml/group/transform/: rotate.cpp  transform.cpp  transform_list.cpp
src/engine/parse/xml/util/: float_attr.cpp  xyz.cpp
src/engine/render/: io_events.cpp  render.cpp  renderer.cpp  state.cpp  world.cpp
src/engine/util/: parse_float.cpp
src/generator/: main.cpp
src/generator/primitives/: bezier_patch.cpp  box.cpp  cone.cpp  plane.cpp  sphere.cpp
src/generator/util/: coord_conv.cpp
src/util/: coord_conv.cpp
